2006-05-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	  fix up versions and milestones

2006-05-06  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Even more milestones

2006-05-04  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-bad/0.10.3.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.3.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:

	  Releases of good and bad 

2006-05-01  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones.

2006-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.10.4.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	  new gst-python release

2006-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.5.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	* src/htdocs/releases/gstreamer/template.xml:
	  new releases of core and base

2006-04-25  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gnonlin/0.10.3.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	Add release notes for gnonlin 0.10.3 "Birthday Cake"

2006-04-21  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gnonlin/0.10.2.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	Add release notes for gnonlin 0.10.2

2006-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/copy/releases/releases.ics:
	* src/copy/releases/releases.rss10.xml:
	* src/copy/releases/releases.rss20.xml:
	* src/htdocs/index.xsl: