@@ -1,0 +1,61 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gnonlin</module>
+  <module-fancy>GNonLin Non-Linear Editing Plug-ins</module-fancy>
+  <name>Solomillo de Ternera</name>
+  <version>0.10.4</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of GNonLin.
+</p>
+
+<p>
+This module contains a set of plug-ins for GStreamer to ease the
+creation of multimedia editors, or any other application where a
+timeline-oriented use of GStreamer makes sense.
+</p>
+<p>
+These elements include:
+<dl>
+<dt>gnlsource</dt>
+<dd>An element for using source elements/bins in a GnlComposition</dd>
+<dt>gnlfilesource</dt>
+<dd>A higher-level element for using a uri in a GnlComposition</dd>
+<dt>gnlcomposition</dt>
+<dd>A container element that handles GNonLin objects</dd>
+</dl>
+</p>
+  </intro>
+  <features>
+    <feature>Refactored GnlSource and GnlFilesource</feature>
+    <feature>Bugs fixed</feature>
+    <feature>More unit testing</feature>
+  </features>
+
+  <applications>
+GNonLin is primarily used by PiTiVi (http://www.pitivi.org/).
+  </applications>
+    <contributors>
+	<person>Edward Hervey</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  
+
+  <bugs>
+  </bugs>
+
+</release>
