@@ -1,3 +1,11 @@
+2006-05-11  Edward Hervey  <edward@fluendo.com>
+
+	* src/htdocs/entities.gst:
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gnonlin/0.10.4.xml:
+	* src/htdocs/releases/gnonlin/Makefile.am:
+	GNonlin 0.10.4 release.
+
 2006-05-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/bugs/bugs.xml:
